<?xml version="1.0"?>
<package format="2">
  <name>miro_behaviour_config</name>
  <version>0.0.0</version>
  <description>The miro_behaviour_config package, a wrapper around miro python GUI</description>

  <maintainer email="luca.buoncompagni@edu.unige.it">Luca Buoncompagni</maintainer>
  <license>GPLv2</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
